# infinitime-gllvm

./: .gitignore  README.md  make_infinitime_bitcode.py  make_toolchain.py  meson.build
subprojects/: .gitignore  InfiniTime.wrap  nrf5-sdk.wrap
subprojects/packagefiles/: infinitime-add-dummy-meson.patch
